# target-starrocks

./: LICENSE  README.md  meltano.yml  pyproject.toml
.github/: dependabot-unverified.yml
.github/workflows/: build.yml  test.yml
target_starrocks/: sinks.py  target.py
